--- a/hackathon/MK/Fragmented_autoTrace/fragmentedTraceUI.ui
+++ b/hackathon/MK/Fragmented_autoTrace/fragmentedTraceUI.ui
@@ -12,8 +12,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>786</width>
-    <height>835</height>
+    <width>790</width>
+    <height>937</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -289,8 +289,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>710</width>
-               <height>435</height>
+               <width>714</width>
+               <height>537</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_7">
@@ -558,13 +558,13 @@
                 <property name="minimumSize">
                  <size>
                   <width>0</width>
-                  <height>180</height>
+                  <height>280</height>
                  </size>
                 </property>
                 <property name="maximumSize">
                  <size>
                   <width>16777215</width>
-                  <height>200</height>
+                  <height>600</height>
                  </size>
                 </property>
                 <property name="font">
@@ -588,7 +588,7 @@
                    <property name="maximumSize">
                     <size>
                      <width>16777215</width>
-                     <height>140</height>
+                     <height>130</height>
                     </size>
                    </property>
                    <property name="font">
@@ -742,6 +742,86 @@
                           <string>Browse</string>
                          </property>
                         </widget>
+                       </item>
+                      </layout>
+                     </widget>
+                    </item>
+                   </layout>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QGroupBox" name="groupBox_7">
+                   <property name="minimumSize">
+                    <size>
+                     <width>0</width>
+                     <height>60</height>
+                    </size>
+                   </property>
+                   <property name="maximumSize">
+                    <size>
+                     <width>16777215</width>
+                     <height>100</height>
+                    </size>
+                   </property>
+                   <property name="font">
+                    <font>
+                     <weight>50</weight>
+                     <bold>false</bold>
+                    </font>
+                   </property>
+                   <property name="title">
+                    <string>Small Particle Removal</string>
+                   </property>
+                   <property name="checkable">
+                    <bool>true</bool>
+                   </property>
+                   <property name="checked">
+                    <bool>false</bool>
+                   </property>
+                   <layout class="QVBoxLayout" name="verticalLayout_10">
+                    <item>
+                     <widget class="QFrame" name="frame_9">
+                      <property name="minimumSize">
+                       <size>
+                        <width>0</width>
+                        <height>40</height>
+                       </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>16777215</width>
+                        <height>50</height>
+                       </size>
+                      </property>
+                      <property name="frameShape">
+                       <enum>QFrame::StyledPanel</enum>
+                      </property>
+                      <property name="frameShadow">
+                       <enum>QFrame::Raised</enum>
+                      </property>
+                      <layout class="QHBoxLayout" name="horizontalLayout_5">
+                       <item>
+                        <widget class="QLabel" name="label_6">
+                         <property name="text">
+                          <string>Size threshold:</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QLineEdit" name="lineEdit_4"/>
+                       </item>
+                       <item>
+                        <spacer name="horizontalSpacer_2">
+                         <property name="orientation">
+                          <enum>Qt::Horizontal</enum>
+                         </property>
+                         <property name="sizeHint" stdset="0">
+                          <size>
+                           <width>382</width>
+                           <height>20</height>
+                          </size>
+                         </property>
+                        </spacer>
                        </item>
                       </layout>
                      </widget>
@@ -942,8 +1022,8 @@
    <slot>saveSettingsClicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>596</x>
-     <y>799</y>
+     <x>600</x>
+     <y>899</y>
     </hint>
     <hint type="destinationlabel">
      <x>524</x>
@@ -958,8 +1038,8 @@
    <slot>traceButtonClicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>673</x>
-     <y>799</y>
+     <x>677</x>
+     <y>899</y>
     </hint>
     <hint type="destinationlabel">
      <x>765</x>
@@ -974,8 +1054,8 @@
    <slot>browseSavePathClicked()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>750</x>
-     <y>751</y>
+     <x>754</x>
+     <y>851</y>
     </hint>
     <hint type="destinationlabel">
      <x>785</x>
@@ -990,8 +1070,8 @@
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>750</x>
-     <y>799</y>
+     <x>754</x>
+     <y>899</y>
     </hint>
     <hint type="destinationlabel">
      <x>785</x>
